added homework06 evaluation